Tab dragging: the dragged tab window should be able to drop into overview.

When dragging a tab out of a snapped browser window to drop into
overview, it should be able to merge the tab window into the overview.
However, with the recent change to always update the dragged window's
bounds before adding it to overview, it's possible that the dragged
window is merged back into its source window due to its bounds change.
To avoid this, we temmrarily disable the dragged window's ability to
merge into another window when updating the dragged window's bounds and
restore its ability after adding it to overview.

Bug: 878191
Change-Id: I219517b19f42395ca8a0c095d7313734358e159e
Reviewed-on: https://chromium-review.googlesource.com/1192357
Reviewed-by: Min Chen <minch@chromium.org>
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586733}
Former-commit-id: 93859a4c486590c64156b57f1fef1c084a084a57